--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Girl-s-Own-Paper-Vol-VIII-No-367-January-8-1887_65733
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 65733-h/images/cover.jpg
 creator:
   author:
     agent_name: Various
@@ -7,6 +10,8 @@ creator:
     gutenberg_agent_id: '116'
     url: http://www.gutenberg.org/2009/agents/116
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65733#The-Girl-s-Own-Paper-Vol-VIII-No-367-January-8-1887
 gutenberg_issued: '2021-06-30'
 gutenberg_type: Text
 identifiers:
